--- a/Mocha Bot/configuration.json
+++ b/Mocha Bot/configuration.json
@@ -1,4 +1,4 @@
 {
-	"token": "ODI1OTk5NTIzNzIxMjQ4Nzkw.YGGGAA.Y_h03cDrGjrr580CR-kWgndal1U",
-	"prefix": "m!"
+	"token": "[your bot token here]",
+	"prefix": "[bot prefix eg m!]"
 }
