--- a/Mocha Bot/configuration.json
+++ b/Mocha Bot/configuration.json
@@ -1,4 +1,4 @@
 {
-	"token": "[your bot token here]",
-	"prefix": "[bot prefix eg m!]"
+	"token": "ODI1OTk5NTIzNzIxMjQ4Nzkw.YGGGAA.yh54drXfLWEeZpfR-JdFpsnh8Fg",
+	"prefix": "m!"
 }
